feat: route to game id
